# music-gen

./: .gitignore  Makefile  README.md  compose.yml  pyproject.toml  suno.env.sh
api/: main.py
coverctl/: __main__.py  ace_step_jobs.py  suno_jobs.py
data/anime-sources/: anime_songs.json
deployment/musicgen/: .env.example  Dockerfile  README.md  app.py  compose.gpu.yml  requirements.txt  run_remote.sh
docker/: Dockerfile.api  Dockerfile.worker
docs/: COVER_EXPERIMENT_REPORT.md  SONG_ACE_SUNO_PROCESS.md  cover-generation-guide.md
pipeline/: arrange_orchestra.py  arrange_piano.py  io.py  manifest.py  metrics.py  midi_clean.py  midi_utils.py  render.py  separate.py  transcribe.py
scripts/: ace_step_batch_covers.py  anime_chain.py  anime_cover_pipeline.py  batch_ace_step_covers.sh  batch_suno_from_ace.sh  bootstrap_suno_infra.sh  download_anime_sources.py
suno_wrapper/: __init__.py  _accessibility.py  _browseros_solver.py  _cdp_solver.py  _yolo_solver.py  audio.py  captcha_solver.py  captcha_tracker.py  client.py  env_util.py  exceptions.py  fingerprint.py  log.py  models.py  payloads.py  preflight.py  storage.py  token_manager.py
tests/: test_midi_clean.py  test_pipeline_smoke.py  test_suno_cli.py
tools/: audio_similarity.py  solve_suno_captcha.py
tools/control-panel/: Cargo.toml  README.md
tools/control-panel/src/: main.rs
worker/: runner.py
